fix spacing

--- a/www/styles.css
+++ b/www/styles.css
@@ -123,7 +123,7 @@ button:not(.x-button):enabled:active, input[type=submit]:active:enabled {
 
 #unlock {
     margin-left: 1em;
-    max-width: 5em;
+    max-width: 4em;
 }
 
 .body {
